Update multi-instance advertisement for Commodore v0.14.0

--- a/class/defaults.yml
+++ b/class/defaults.yml
@@ -1,6 +1,7 @@
 parameters:
   minio:
-    multi_instance: true
+    =_metadata:
+      multi_instance: true
     namespace: syn-minio
     charts:
       minio: 8.0.0
