Rename the helm chart release_name variable for Kapitan to name
Kapitan has changed the helm chart naming and release_name is
now deprecated.

--- a/class/minio.yml
+++ b/class/minio.yml
@@ -26,5 +26,5 @@ parameters:
           - minio/helmcharts/minio
         helm_values: ${minio:helmValues}
         helm_params:
-          release_name: minio-${_instance}
+          name: minio-${_instance}
           namespace: "${minio:namespace}"
