--- a/tests/golden/defaults/minio/minio/00_namespace.yaml
+++ b/tests/golden/defaults/minio/minio/00_namespace.yaml
@@ -3,5 +3,8 @@ kind: Namespace
 metadata:
   annotations: {}
   labels:
+    app: minio
+    app.kubernetes.io/instance: minio-minio
+    app.kubernetes.io/name: minio-minio
     name: syn-minio
   name: syn-minio
