--- a/tests/golden/defaults/minio/minio/01_adminCredentials.yaml
+++ b/tests/golden/defaults/minio/minio/01_adminCredentials.yaml
@@ -8,6 +8,6 @@ metadata:
   name: admin-credentials-minio
   namespace: syn-minio
 stringData:
-  accesskey: t-silent-test-1234/c-green-test-1234/minio/minio-accesskey
-  secretkey: t-silent-test-1234/c-green-test-1234/minio/minio-secretkey
+  rootPassword: FooBar@123
+  rootUser: admin
 type: Opaque
