--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,3 @@
-;
-; File managed by ModuleSync - Do Not Edit
-;
 ; This file is for unifying the coding style for different editors and IDEs.
 ; More information at https://editorconfig.org
 
@@ -27,3 +24,10 @@ insert_final_newline = false
 
 [Makefile]
 indent_style = tab
+
+; Ignore golden test outputs
+[tests/golden/**]
+indent_size = unset
+indent_style = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
