--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,7 +1,3 @@
-#
-# File managed by ModuleSync - Do Not Edit
-#
-
 extends: default
 
 rules:
@@ -16,3 +12,4 @@ ignore: |
   manifests/
   vendor/
   compiled/
+  tests/golden/
