--- a/class/minio.yml
+++ b/class/minio.yml
@@ -10,7 +10,7 @@ parameters:
       - input_paths:
           - minio/component/app.jsonnet
         input_type: jsonnet
-        output_path: apps/
+        output_path: .
       - input_paths:
           - minio/component/main.jsonnet
         input_type: jsonnet
